# Rossman-Sales-Prediction-New

./: .dockerignore  .gitignore  Dockerfile  app.py  database.py  pyproject.toml  requirements.txt
lib/: rossman_sales_prediction.ipynb
static/: style.css
templates/: index.html  predictions.html
